added assests folder

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     ----------------------------------navbar section----------------------- -->
     <nav>
       <div>
-        <img src="./TheBloodBankLogowithtext.png" class="logo" />
+        <img src="./assets/TheBloodBankLogowithtext.png" class="logo" />
       </div>
       <input type="checkbox" id="click" />
       <label for="click" class="menu-btn">
@@ -49,7 +49,7 @@
 
       </div>
       <div>
-        <img src="./6262.jpg" alt="blood donation" class="landing-image">
+        <img src="./assets/6262.jpg" alt="blood donation" class="landing-image">
       </div>
 
     </section>
@@ -104,7 +104,7 @@
           <!-- my added -->
           <div class="col">
             <div class="donor-card">
-              <img src="p1.jpg" alt="">
+              <img src="./assets/p1.jpg" alt="">
               <div class="name">Anuragh Baskota</div>
               <div class="stars">
                 <div class"contact-number"> <i class="fa-solid fa-phone"></i>: 9861324282</div>
@@ -128,7 +128,7 @@
 
           <div class="col">
             <div class="donor-card">
-              <img src="p1.jpg" alt="">
+              <img src="./assets/p1.jpg" alt="">
               <div class="name">Anuragh Baskota</div>
               <div class="stars">
                 <div class"contact-number"> <i class="fa-solid fa-phone"></i>: 9861324282</div>
@@ -148,7 +148,7 @@
           </div>
   <div class="col">
             <div class="donor-card">
-              <img src="p1.jpg" alt="">
+              <img src="./assets/p1.jpg" alt="">
               <div class="name">Anuragh Baskota</div>
               <div class="stars">
                 <div class"contact-number"> <i class="fa-solid fa-phone"></i>: 9861324282</div>
@@ -175,7 +175,7 @@
   <!-- -----------------------------  events------------------------ -->
 
 
-  
+
   <section class="events">
 
 
