added userpage for logged in user with notification tray and sms request pannel

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="utf-8">
   <title>The blood bank </title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="index.css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://kit.fontawesome.com/f70fd3821b.js" crossorigin="anonymous"></script>
-  <script src="home.js"></script>
+  <script src="./jsfiles/index.js"></script>
   <!-- <link href="https://cdn.lineicons.com/3.0/lineicons.css" rel="stylesheet"> -->
-
+</head>
 <body>
   <section class="all-doners">
 
@@ -82,9 +82,17 @@
             <br><br>
             <select name="Blood-group">
               <option value="" selected="selected">Blood Group</option>
+              <option value="A+">A+</option>
+							<option value="A-">A-</option>
+							<option value="B+">B+</option>
+							<option value="B-">B-</option>
+							<option value="O+">O+</option>
+							<option value="O-">O-</option>
+							<option value="AB+">AB+</option>
+							<option value="AB-">AB-</option>
             </select>
             <br><br>
-            <button type="submit"> Submit</button>
+            <button type="submit"> Search</button>
           </form>
         </div>
       </div>
