added conform password section in signup

--- a/loginregister.html
+++ b/loginregister.html
@@ -48,6 +48,7 @@
 						<input type="text" name='create_contact' placeholder="Contact" required />
 						<input type="email" name='create_email' placeholder="Email" required />
 						<input type="password" name='create_password' placeholder="Password" required /> 
+						<input type="password" name='create_password' placeholder="ConformPassword" required /> 
 				<label class="profile-picture-selection">Profile Picture	</label>	<input type="file" name="profilepic" title="choose profile pic "class="profileupload" accept="image/png, image/gif, image/jpeg" />
 
 						<select name="blood_group" class="group-select" required style="margin-bottom: 10px;">
