message page for qr scanned user with text area

--- a/qrmessage.html
+++ b/qrmessage.html
@@ -38,12 +38,14 @@
                   >Your email will not be sent you can mention your contact and
                   location details in the message</span
                 >
+                <br />
 
-                <input
-                  type="text"
-                  name="otp"
+                <textarea
                   placeholder="Message, contact and location details"
-                />
+                  rows="10"
+                  cols="50"
+                ></textarea>
+                <br />
 
                 <button>Send Message</button>
               </form>
