added styles folder for better arrangement

--- a/requestpool.html
+++ b/requestpool.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Pintu</title>
-  <link rel="stylesheet" href="requestpool.css">
+  <link rel="stylesheet" href="./styles/requestpool.css">
   
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://kit.fontawesome.com/f70fd3821b.js" crossorigin="anonymous"></script>
